--- a/app/src/main/res/layout/fragment_active_orders.xml
+++ b/app/src/main/res/layout/fragment_active_orders.xml
@@ -5,31 +5,32 @@
     android:background="@android:color/white"
     tools:context="com.example.hardeep.myproject.user.fragments.Active_orders">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/slider"
-        android:layout_marginTop="180dp"
-        android:gravity="center_horizontal|center_vertical">
-
-    </LinearLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:id="@+id/progressbaractive"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Active Orders"
+        android:fontFamily="cursive"
         android:layout_centerHorizontal="true"
         android:textColor="#000000"
         android:textStyle="bold"
+        android:textSize="30sp"
+        android:id="@+id/t"
         style="@style/TextAppearance.AppCompat.Headline"
         />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
-        android:padding="15dp"
+        android:layout_below="@+id/t"
         android:id="@+id/orderrecyclerview">
 
     </android.support.v7.widget.RecyclerView>
