--- a/app/src/main/res/layout/order_item_list_layout.xml
+++ b/app/src/main/res/layout/order_item_list_layout.xml
@@ -1,41 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:paddingTop="5dp"
-    android:paddingLeft="20dp">
+    android:paddingLeft="10dp"
+    android:paddingTop="5dp">
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Item_name"
-            android:id="@+id/itemname"
-            android:textSize="20dp"
-            android:layout_centerVertical="true"
-            />
+    <TextView
+        android:id="@+id/itemname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="Item_name"
+        android:textSize="20dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quantity"
-            android:textSize="20dp"
-            android:layout_centerVertical="true"
-            android:id="@+id/quan"
-            android:layout_marginLeft="180dp"
-            android:gravity="center_horizontal"
-            />
+    <TextView
+        android:id="@+id/quan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="180dp"
+        android:gravity="center_horizontal"
+        android:text="Quantity"
+        android:textSize="20dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="price"
-            android:textSize="20dp"
-            android:id="@+id/item_price"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="290dp"
-            android:gravity="center_horizontal"
-            />
+    <TextView
+        android:id="@+id/item_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center_horizontal"
+        android:layout_marginRight="10dp"
+        android:text="price"
+        android:textSize="20dp" />
 
 </RelativeLayout>
