--- a/app/src/main/res/layout/user_order_format.xml
+++ b/app/src/main/res/layout/user_order_format.xml
@@ -1,52 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-
     android:id="@+id/cardview"
-    android:layout_width="330dp"
-    android:layout_centerHorizontal="true"
+    android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_centerHorizontal="true"
     android:layout_margin="5dp"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="0.0px"
     app:cardCornerRadius="4dp"
-    card_view:cardBackgroundColor="#000000"
     card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="16dp"
-    card_view:cardMaxElevation="10dp">
+    card_view:cardElevation="16dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/card1">
+        android:background="@drawable/card1"
+        >
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="90dp"
+        android:paddingLeft="15dp"
+        >
 
         <TextView
             android:id="@+id/display_order_number"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="105dp"
+            android:layout_height="30dp"
             android:text="Order_id"
             android:textColor="#000"
-            android:textSize="25dp" />
+            android:layout_marginTop="10dp"
+            android:fontFamily="casual"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/cost_id"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="145dp"
-            android:gravity="center_vertical"
-            android:text="cost"
+            android:layout_height="40dp"
+            android:text="INR 34"
+            android:fontFamily="casual"
             android:textColor="#000"
-            android:textSize="35dp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:id="@+id/status"
+            android:text="Status"
+            android:textStyle="bold"
+            android:fontFamily="casual"
+            android:textSize="20sp"
+            />
 
+    </LinearLayout>
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
 
 
