--- a/app/src/main/res/layout/activity_editpassword.xml
+++ b/app/src/main/res/layout/activity_editpassword.xml
@@ -5,78 +5,88 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@drawable/backk"
     tools:context="com.example.hardeep.myproject.user.editpassword">
 
     <TextView
+        android:id="@+id/t3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
         android:layout_marginTop="15dp"
-        android:text="Enter the old password"/>
+        android:fontFamily="@font/berkshire_swash"
+        android:text="Enter the old password"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/t4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/oldpass"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/berkshire_swash"
+        android:text="Enter the new password"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="120dp"
-        android:text="Enter the new password"/>
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/t5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="220dp"
+        android:layout_below="@+id/newpass"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/berkshire_swash"
+        android:text="Re-enter the new password"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:text="Re-enter the new password"/>
+        android:textStyle="bold" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/edittextview"
-        android:paddingLeft="10dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="60dp"
         android:id="@+id/oldpass"
-        android:inputType="textPassword"
-        />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_below="@+id/t3"
+        android:layout_marginTop="10dp"
         android:background="@drawable/edittextview"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="160dp"
+        android:textColor="@android:color/black" />
+
+    <EditText
         android:id="@+id/newpass"
-        android:inputType="textPassword"
-        />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_below="@+id/t4"
+        android:layout_marginTop="10dp"
         android:background="@drawable/edittextview"
-        android:paddingLeft="10dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="260dp"
-        android:id="@+id/renewpass"
         android:inputType="textPassword"
-        />
+        android:paddingLeft="10dp"
+        android:textColor="@android:color/black" />
+
+    <EditText
+        android:id="@+id/renewpass"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/t5"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edittextview"
+        android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        android:textColor="@android:color/black" />
 
     <Button
+        android:id="@+id/chngpass"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:id="@+id/chngpass"
-        android:textColor="@android:color/white"
-        android:text="Change Password"
-        android:background="@drawable/buttonview"
+        android:layout_below="@+id/renewpass"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="370dp"
-        />
+        android:layout_marginTop="70dp"
+        android:background="@drawable/buttonview"
+        android:text="Change Password"
+        android:fontFamily="@font/berkshire_swash"
+        android:textColor="@android:color/white" />
 
 
 </RelativeLayout>
