--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -3,114 +3,115 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
     android:layout_height="match_parent"
+    android:background="@drawable/backk"
+    android:padding="15dp"
     tools:context="com.example.hardeep.myproject.user.editprofile">
 
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
-        android:textSize="18dp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
         android:layout_marginTop="140dp"
-        android:layout_marginLeft="20dp"
-        android:id="@+id/textView3" />
+        android:fontFamily="@font/berkshire_swash"
+        android:text="Name"
+        android:textColor="@android:color/white"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/t1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/name1"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/berkshire_swash"
         android:text="Username"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="220dp"
-        android:textSize="18dp"
-        android:layout_marginLeft="20dp"
-        />
+        android:textColor="@android:color/white"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/t2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/username1"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/berkshire_swash"
         android:text="Email"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:layout_marginTop="300dp"
-        android:textSize="18dp"
-        android:layout_marginLeft="20dp"
-        />
+        android:textColor="@android:color/white"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/edittextview"
-        android:textColor="@android:color/black"
-        android:paddingLeft="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="170dp"
         android:id="@+id/name1"
-        android:inputType="textPersonName"
-        />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_below="@+id/textView3"
         android:background="@drawable/edittextview"
-        android:layout_marginLeft="20dp"
-        android:textColor="@android:color/black"
-        android:layout_marginRight="20dp"
+        android:inputType="textPersonName"
         android:paddingLeft="10dp"
-        android:layout_marginTop="250dp"
-        android:id="@+id/username1"
-        />
+        android:textColor="@android:color/black" />
 
+    <EditText
+        android:id="@+id/username1"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/t1"
+        android:background="@drawable/edittextview"
+        android:paddingLeft="10dp"
+        android:textColor="@android:color/black" />
 
 
     <TextView
+        android:id="@+id/email1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_below="@+id/t2"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="340dp"
-        android:textColor="@android:color/black"
-        android:textSize="16dp"
-        android:id="@+id/email1"
-        android:maxLines="1"
-        />
+        android:paddingLeft="10dp"
+        android:maxLines="2"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Button
+        android:id="@+id/update"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Update Details"
-        android:background="@drawable/buttonview"
-        android:textSize="18dp"
-        android:textColor="@android:color/white"
+        android:layout_below="@+id/email1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="440dp"
-        android:id="@+id/update"
-        />
+        android:layout_marginTop="70dp"
+        android:background="@drawable/buttonview"
+        android:fontFamily="@font/berkshire_swash"
+        android:text="Update Details"
+        android:textColor="@android:color/white"
+        android:textSize="18dp" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/image1"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
-        android:backgroundTint="#e0e0e0"
-        android:src="@mipmap/camerapic"
         android:clickable="true"
-        android:scaleType="fitCenter"
+        android:padding="2dp"
+        android:background="#FFFFFF"
         android:onClick="Choose_the_image"
+        android:scaleType="centerCrop"
         />
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/image1"
+        android:fontFamily="@font/berkshire_swash"
         android:text="Edit profile picture"
-        android:id="@+id/textView1" />
+        android:textColor="#FFFFFF" />
 </RelativeLayout>
