--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/backk"
     tools:context="com.example.hardeep.myproject.Main">
+
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="210dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/log"
+        android:id="@+id/log"
+        />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/log"
+        >
+
 
     <EditText
         android:id="@+id/mail"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="100dp"
         android:background="@drawable/edittextview"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="50dp"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
         android:layout_marginRight="10dp"
@@ -28,7 +45,7 @@
         android:layout_width="match_parent"
         android:gravity="center_vertical"
         android:layout_height="50dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:layout_marginLeft="10dp"
         android:textColor="@android:color/black"
         android:background="@drawable/edittextview"
@@ -43,8 +60,9 @@
         android:layout_height="wrap_content"
         android:text="Email"
         android:textSize="24dp"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="60dp"
+        android:fontFamily="@font/berkshire_swash"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:id="@+id/uname"
         />
@@ -53,36 +71,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password"
-        android:textColor="@android:color/black"
+        android:textColor="#FFFFFF"
         android:textSize="24dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="110dp"
+        android:fontFamily="@font/berkshire_swash"
         android:layout_marginLeft="20dp"
         android:id="@+id/password1"
         />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Log In"
-        android:textStyle="bold"
-        android:textSize="22dp"
-        android:fontFamily="casual"
-        android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="270dp"
-        android:background="@drawable/buttonview"
-        android:id="@+id/login" />
+        <Button
+            android:id="@+id/login"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="230dp"
+            android:background="@drawable/buttonview"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="Log In"
+            android:textColor="#FFFFFF"
+            android:textSize="22dp"
+            android:textStyle="bold" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create a new account"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="290dp"
         android:id="@+id/newacc"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="#FFFFFF"
         android:textSize="16dp"
         android:clickable="true"
+        android:fontFamily="@font/berkshire_swash"
         android:onClick="Clickme"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
