--- a/app/src/main/res/layout/activity_newaccount.xml
+++ b/app/src/main/res/layout/activity_newaccount.xml
@@ -4,199 +4,204 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/backk"
     tools:context="com.example.hardeep.myproject.newaccount">
 
     <RelativeLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/layout">
+        android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"
-        android:backgroundTint="#FFFFFF"
-        android:src="@mipmap/profilepic"
-        android:clickable="true"
-        android:onClick="Choose_image"
-        android:scaleType="centerCrop"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/colorPrimary"
-        android:text="Select profile picture"
-        android:id="@+id/textView" />
+        <ImageButton
+            android:id="@+id/image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="13dp"
+            android:backgroundTint="#FFFFFF"
+            android:clickable="true"
+            android:onClick="Choose_image"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/profilepic"
+            android:focusable="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter full name"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginLeft="20dp"
-        android:id="@+id/textView2"
-        />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/image"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="@string/select_profile_picture"
+            android:textColor="@color/colorPrimary" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_height="40dp"
-        android:textColor="@android:color/black"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/edittextview"
-        android:layout_below="@+id/textView2"
-        android:id="@+id/name"
-        android:inputType="textPersonName"
-        />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="@string/enter_full_name"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Set Username"
-        android:layout_below="@+id/name"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:id="@+id/usernametext"
-        android:layout_marginLeft="20dp"
-        />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:textColor="@android:color/black"
-        android:layout_marginRight="20dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:background="@drawable/edittextview"
-        android:layout_below="@+id/usernametext"
-        android:id="@+id/username"
-        android:singleLine="true"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Set Email"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:id="@+id/emailtext"
-        android:layout_below="@+id/username"
-        android:textSize="18dp"
-        android:layout_marginLeft="20dp"
-        />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:id="@+id/email"
-        android:layout_below="@+id/emailtext"
-        android:textColor="@android:color/black"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:background="@drawable/edittextview"
-        android:maxLines="1"
-        android:singleLine="true"
-        />
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edittextview"
+            android:inputType="textPersonName"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:focusable="false"
+            android:textColor="@android:color/black" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/email"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:text="Set Password"
-        android:textSize="18dp"
-        android:id="@+id/passwordtext"
-        android:layout_marginLeft="20dp"
-        />
+        <TextView
+            android:id="@+id/usernametext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="@string/set_username"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColor="@android:color/black"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:id="@+id/reenterpassword"
-        android:layout_below="@+id/reenterpasswordtext"
-        android:background="@drawable/edittextview"
-        android:inputType="textPassword"
-        android:singleLine="true"
-        />
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/usernametext"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edittextview"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:focusable="false"
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/password"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:text="Re-enter Password"
-        android:textSize="18dp"
-        android:id="@+id/reenterpasswordtext"
-        android:layout_marginLeft="20dp"
-        />
+        <TextView
+            android:id="@+id/emailtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="Set Email"
+            android:textColor="@android:color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColor="@android:color/black"
-        android:id="@+id/password"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_below="@+id/passwordtext"
-        android:background="@drawable/edittextview"
-        android:inputType="textPassword"
-        android:singleLine="true"
-        />
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/emailtext"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edittextview"
+            android:maxLines="1"
+            android:paddingLeft="10dp"
+            android:focusable="false"
+            android:paddingRight="10dp"
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
 
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:visibility="invisible"
-        android:foregroundGravity="top"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="-11.5dp"
-        android:indeterminate="true"
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:id="@+id/progressbar1"
-        />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Create Account"
-        android:textSize="18dp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:fontFamily="casual"
-        android:layout_below="@+id/reenterpassword"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/buttonview"
-        android:id="@+id/createacc"
-        android:layout_marginBottom="20sp"
-        />
+        <TextView
+            android:id="@+id/passwordtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/email"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="@string/set_password"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/reenterpassword"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/reenterpasswordtext"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edittextview"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:focusable="false"
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/reenterpasswordtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/password"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="@string/re_enter_password"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/passwordtext"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edittextview"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:focusable="false"
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
+
+        <ProgressBar
+            android:id="@+id/progressbar1"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="-11.5dp"
+            android:foregroundGravity="top"
+            android:indeterminate="true"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/createacc"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/reenterpassword"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20sp"
+            android:background="@drawable/buttonview"
+            android:fontFamily="@font/berkshire_swash"
+            android:text="@string/create_account"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 </ScrollView>
