--- a/app/src/main/res/layout/format_recy_view_item_settings.xml
+++ b/app/src/main/res/layout/format_recy_view_item_settings.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/item_format"
-    android:orientation="horizontal"
-    android:padding="15dp">
+    android:layout_height="80dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="10dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="10dp"
+    app:cardBackgroundColor="#FFFFFF"
+    >
 
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginLeft="5dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:id="@+id/item_format"
+        >
+
+        <ImageView
+            android:id="@+id/image1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20dp"
-        android:textSize="25dp"
+        android:textColor="#000"
+        android:layout_gravity="center"
+        android:fontFamily="@font/berkshire_swash"
+        android:layout_marginStart="20dp"
+        android:textSize="20sp"
         />
+    </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
