--- a/app/src/main/res/layout/fragment_price_list.xml
+++ b/app/src/main/res/layout/fragment_price_list.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
+        android:background="#FFFFFF"
         tools:context="com.example.hardeep.layoutorders.MainActivity">
 
 
@@ -16,7 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="Price List"
+            android:fontFamily="@font/berkshire_swash"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="30dp" />
 
         <TextView
@@ -25,6 +28,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="70dp"
             android:text="Cloth Type"
+            android:fontFamily="@font/berkshire_swash"
+            android:textStyle="bold"
             android:textColor="#000000"
             android:textSize="20dp" />
 
@@ -36,18 +41,22 @@
             android:gravity="center_horizontal"
             android:text="Price per item"
             android:textColor="#000000"
+            android:fontFamily="@font/berkshire_swash"
+            android:textStyle="bold"
             android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="130dp"
+            android:fontFamily="@font/berkshire_swash"
             android:text="1.Shirts/T-Shirts/Kurtas"
             android:textSize="15dp" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content"            android:fontFamily="@font/berkshire_swash"
+
             android:layout_marginLeft="250dp"
             android:layout_marginTop="130dp"
             android:text="Rs.5"
@@ -57,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="170dp"
+            android:fontFamily="@font/berkshire_swash"
             android:text="2.Pent/Jeans/Dhoti/Lungi"
             android:textSize="15dp" />
 
@@ -64,6 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="170dp"
             android:text="Rs.7"
             android:textSize="15dp" />
@@ -71,6 +82,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="210dp"
             android:text="3.Bed Sheet"
             android:textSize="15dp" />
@@ -79,6 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="210dp"
             android:text="Rs.10"
             android:textSize="15dp" />
@@ -87,6 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:text="4.Saree"
             android:textSize="15dp" />
 
@@ -95,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="250dp"
             android:text="Rs.20"
             android:textSize="15dp" />
@@ -102,6 +117,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="290dp"
             android:text="5.Coat or Blazer(Dry Clean)"
             android:textSize="15dp" />
@@ -110,6 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="290dp"
             android:text="Rs.50"
             android:textSize="15dp" />
@@ -118,6 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="330dp"
+            android:fontFamily="@font/berkshire_swash"
             android:text="6.Blanket"
             android:textSize="15dp" />
 
@@ -125,6 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="330dp"
             android:text="Rs.200"
             android:textSize="15dp" />
@@ -132,6 +151,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="370dp"
             android:text="6.Socks(Pair)/Handkerchief"
             android:textSize="15dp" />
@@ -139,6 +159,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginLeft="250dp"
             android:layout_marginTop="370dp"
             android:text="Rs.2"
@@ -147,6 +168,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="410dp"
             android:textSize="15dp"
             android:text="7.Sweater/Hoodies/SweatShirts" />
@@ -155,6 +177,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="410dp"
             android:text="Rs.10"
             android:textSize="15dp" />
@@ -163,6 +186,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="450dp"
+            android:fontFamily="@font/berkshire_swash"
             android:textSize="15dp"
             android:text="8.Ladies Suit" />
 
@@ -170,6 +194,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="450dp"
             android:text="Rs.10"
             android:textSize="15dp" />
@@ -178,6 +203,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="490dp"
+            android:fontFamily="@font/berkshire_swash"
             android:textSize="15dp"
             android:text="9.Under garments(Any)" />
 
@@ -185,6 +211,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="250dp"
+            android:fontFamily="@font/berkshire_swash"
             android:layout_marginTop="490dp"
             android:text="Rs.3"
             android:textSize="15dp" />
