--- a/app/src/main/res/layout/fragment_user_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_user_profile_edit.xml
@@ -4,26 +4,27 @@
     android:id="@+id/rel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/backk"
     tools:context="com.example.hardeep.myproject.user.user_profile_edit">
 
     <FrameLayout
+        android:id="@+id/fram"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fram">
+        android:layout_height="match_parent">
+
     </FrameLayout>
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_marginTop="170dp">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rel1">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="wrap_content"
             android:scrollbars="vertical">
 
         </android.support.v7.widget.RecyclerView>
@@ -32,55 +33,69 @@
         <Button
             android:id="@+id/signout"
             android:layout_width="200dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/recyclerview"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/buttonview"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            android:textStyle="bold"
-            android:gravity="center_horizontal|center_vertical"
-            android:textColor="@android:color/white"
+            android:fontFamily="@font/berkshire_swash"
+            android:gravity="center"
             android:text="Sign Out"
-            android:fontFamily="monospace"
-            android:textSize="23dp" />
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:background="#000000"
-        android:padding="10dp">
+    <android.support.v7.widget.CardView
+        android:id="@+id/rel1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        android:layout_margin="8dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            app:civ_border_color="#FFFFFF"
-            app:civ_border_width="1dp" />
-
-        <TextView
-            android:id="@+id/nameuser"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="75dp"
-            android:gravity="center_horizontal"
-            android:textColor="#FFFFFF"
-            android:textSize="29dp" />
+            android:layout_height="170dp"
+            android:background="#FFFFFF"
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/emailuser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="110dp"
-            android:gravity="center_horizontal"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImage"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+                app:civ_border_color="#FFFFFF"
+                app:civ_border_width="1dp" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/nameuser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/circleImage"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/berkshire_swash"
+                android:gravity="center_horizontal"
+                android:textColor="#000"
+                android:textSize="29dp" />
+
+            <TextView
+                android:id="@+id/emailuser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/nameuser"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/berkshire_swash"
+                android:gravity="center_horizontal"
+                android:textColor="#000"
+                android:textSize="20dp" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
 
