--- a/app/src/main/res/layout/nav_header_the_user_profile.xml
+++ b/app/src/main/res/layout/nav_header_the_user_profile.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@mipmap/laundry_header"
+    android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="10dp"
@@ -29,7 +29,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#0277BD" />
+        android:textColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/email"
@@ -37,6 +37,9 @@
         android:layout_marginLeft="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#0277BD" />
+        android:textColor="#FFFFFF"
+        android:layout_marginBottom="20dp"
+
+        />
 
 </LinearLayout>
