--- a/app/src/main/res/layout/order_item_list_layout.xml
+++ b/app/src/main/res/layout/order_item_list_layout.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:paddingLeft="10dp"
-    android:paddingTop="5dp">
+    android:orientation="horizontal"
+    android:padding="5dp"
+    android:weightSum="6">
 
 
     <TextView
         android:id="@+id/itemname"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_weight="3"
         android:text="Item_name"
-        android:textSize="20dp" />
+        android:textColor="#000"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/quan"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="180dp"
-        android:gravity="center_horizontal"
+        android:layout_weight="2"
+        android:textColor="#000"
+        android:gravity="center"
         android:text="Quantity"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/item_price"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center_horizontal"
-        android:layout_marginRight="10dp"
+        android:textColor="#000"
+        android:layout_weight="1"
+        android:gravity="center"
         android:text="price"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
-</RelativeLayout>
+</LinearLayout>
