--- a/app/src/main/res/layout/user_order_format.xml
+++ b/app/src/main/res/layout/user_order_format.xml
@@ -6,57 +6,67 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_centerHorizontal="true"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="4dp"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="16dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp"
+    android:layout_margin="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/card1"
-        >
+        android:background="#FFFFFF">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="90dp"
-        android:paddingLeft="15dp"
-        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingStart="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
 
-        <TextView
-            android:id="@+id/display_order_number"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="Order_id"
-            android:textColor="#000"
-            android:layout_marginTop="10dp"
-            android:fontFamily="casual"
-            android:textSize="20sp" />
+            >
 
-        <TextView
-            android:id="@+id/cost_id"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="INR 34"
-            android:fontFamily="casual"
-            android:textColor="#000"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ORDER"
+                android:textStyle="bold"
+                android:fontFamily="@font/berkshire_swash"
+                android:textColor="#000"
+                android:textSize="40sp"
+                />
+            <TextView
+                android:id="@+id/display_order_number"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="serif"
+                android:text="Order_id"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:id="@+id/status"
-            android:text="Status"
-            android:textStyle="bold"
-            android:fontFamily="casual"
-            android:textSize="20sp"
-            />
+            <TextView
+                android:id="@+id/cost_id"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:fontFamily="serif"
+                android:text="INR 34"
+                android:textColor="#000"
+                android:layout_marginTop="5dp"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:fontFamily="@font/berkshire_swash"
+                android:text="Status"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
