--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,38 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay1" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="NavigationDrawerStyle">
+
+        <item name="android:textSize">15sp</item><!-- text size in menu-->
+        <item name="android:fontFamily">@font/berkshire_swash</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <!-- item size in menu-->
+        <item name="android:listPreferredItemHeightSmall">50dp</item>
+        <item name="listPreferredItemHeightSmall">50dp</item>
+
+        <!-- item padding left in menu-->
+        <item name="android:listPreferredItemPaddingLeft">20dp</item>
+        <item name="listPreferredItemPaddingLeft">20dp</item>
+
+        <!-- item padding right in menu-->
+        <item name="android:listPreferredItemPaddingRight">20dp</item>
+        <item name="listPreferredItemPaddingRight">20dp</item>
+    </style>
+
+    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">
+        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>
+        <item name="android:fontFamily">@font/berkshire_swash</item>
+        <item name="DialogSpotColor">@color/colorAccent</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="DialogSpotCount">6</item>
+    </style>
+
+    <style name="AppTheme.PopupOverlay1" parent="ThemeOverlay.AppCompat.Light" >
+
+        <item name="android:textColor">#000</item>
+
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
@@ -27,6 +58,8 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="colorAccent">@android:color/white</item>
+        <item name="android:fontFamily">@font/berkshire_swash</item>
+
     </style>
 
 </resources>
